# panasonic-pair-manager

./: .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: ci.yml
scripts/: generate_windows_icon.py  run-playwright-ui.mjs
src/: App.tsx  PreviewWindow.tsx  api.ts  i18n.ts  main.tsx  styles.css  theme-options.ts  theme.ts  types.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  commands.rs  db.rs  delete.rs  drives.rs  exiftool.rs  lib.rs  main.rs  models.rs  scanner.rs  state.rs  thumbnail.rs  window.rs
src-tauri/src/commands/: file_actions.rs  library.rs  metadata.rs  scan.rs  sources.rs  tools.rs
src-tauri/src/db/: files.rs  groups.rs  operations.rs  schema.rs  summary.rs
src-tauri/src/scanner/: grouping.rs  summary.rs  tests.rs  types.rs
src-tauri/src/thumbnail/: cache_key.rs  external_tools.rs  photo.rs  video.rs
src/components/: AccessibleModal.tsx  Button.tsx  IconButton.tsx  PhotoCard.tsx  PhotoGrid.tsx  PhotoGridEmptyState.tsx  PhotoGridVirtualRows.tsx  SidebarItem.tsx  Summary.tsx  ToolbarButton.tsx
src/hooks/: mediaLibrary-utils.test.ts  mediaLibrary-utils.ts  useAppMutations.ts  useAppPreferences.ts  useDeleteWorkflow.ts  useElementWidth.ts  useGalleryEmptyState.ts  useGalleryLayoutTransition.ts  useGalleryStateCoordinator.ts  useMediaLibrary.ts  useMediaMode.ts  useModalLifecycle.ts  usePhotoActions.ts  usePhotoCardThumbnail.ts  usePreviewWindow.ts  useRemovableRootsLifecycle.ts  useScanWorkflow.ts  useSelectionMode.ts  useSourceLifecycle.ts  useSourceSelection.ts
src/locales/: de.ts  en.ts  es.ts  fr.ts  ja.ts  ko.ts  pt.ts  translations.ts  zh-CN.ts  zh-TW.ts
src/styles/: base.css  index.css  layout.css  responsive.css  tokens.css
tests/ui/: app.spec.ts
(+46 files in other folders)
